--- a/index.html
+++ b/index.html
@@ -4,13 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Landing Page</title>
 </head>
 <body>
-    <div class="header"></div>
-    <div class="hero"></div>
-    <div class="info"></div>
-    <div class="quote"></div>
-    <div class="footer"></div>
+    <div class="header">
+
+        <div class="header-logo"> Header Logo</div>
+        <div class="links">
+        <a class="link1">link one</a>
+        <a class="link2">link two</a>
+        <a class="link3">link three</a>
+    </div>
+    </div>
+    <div class="hero">
+        <h1>placeholder header</h1>
+        <p>placeholder para</p>
+        <button>Sign up</button>
+    </div>
+    <div class="info">
+
+        <h2>placeholder info</h2>
+
+        <div class="images">
+        <div class="">
+            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
+            <div>this is a image</div>
+        </div>
+        <div class="">
+            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
+            <div>this is a image</div>
+        </div>
+        <div class="">
+            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
+            <div>this is a image</div>
+        </div>
+        <div class="">
+            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
+            <div>this is a image</div>
+        </div>
+    </div>
+    </div>
+    </div>
+
+    <div class="quote"> 
+
+        <div class="quote-text"></div>
+        <div class="quote-author">-placeholder author</div>
+
+    </div>
+    <div class="action">
+        <div class="action-text">
+            <h3>action header</h3>
+            <p>action call</p>
+        </div>
+       <button class="action-button">sign up</button> 
+    </div>
+    <div class="footer"> placeholder</div>
 </body>
 </html>
