Add more style remove weird paddind in whole body

--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
         <a class="link1">link one</a>
         <a class="link2">link two</a>
         <a class="link3">link three</a>
+
     </div>
     </div>
+    <div class="container">
     <div class="hero">
+        <div class="hero-text">
         <h1>placeholder header</h1>
         <p>placeholder para</p>
         <button>Sign up</button>
+    </div>
+        <div class="hero-image">
+            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>    
+        </div>
     </div>
     <div class="info">
 
@@ -60,6 +67,7 @@
         </div>
        <button class="action-button">sign up</button> 
     </div>
-    <div class="footer"> placeholder</div>
+</div>
+    <div class="footer"><div class="foot"> placeholder </div></div>
 </body>
 </html>
