Style quote section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="quote"> 
 
-        <div class="quote-text"></div>
+        <div class="quote-text">This a quote that is used as a placeholder I dont know what to write</div>
         <div class="quote-author">-placeholder author</div>
 
     </div>
