--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
         <div class="header-logo"> Header Logo</div>
         <div class="links">
-        <a class="link1">link one</a>
-        <a class="link2">link two</a>
-        <a class="link3">link three</a>
+        <a class="link1">About</a>
+        <a class="link2">Downloads</a>
+        <a class="link3">Contact</a>
 
     </div>
     </div>
@@ -62,8 +62,8 @@
     </div>
     <div class="action">
         <div class="action-text">
-            <h3>action header</h3>
-            <p>action call</p>
+            <h3>Sign Up to the website</h3>
+            <p>this button dose not work click it to your hrearts content</p>
         </div>
        <button class="action-button">sign up</button> 
     </div>
