Finish full layout,styling and content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
 
-        <div class="header-logo"> Header Logo</div>
+        <div class="header-logo"> Cat Landing</div>
         <div class="links">
         <a class="link1">About</a>
         <a class="link2">Downloads</a>
@@ -21,34 +21,34 @@
     <div class="container">
     <div class="hero">
         <div class="hero-text">
-        <h1>placeholder header</h1>
-        <p>placeholder para</p>
+        <h1>Some cats images I found</h1>
+        <p>I don't know what else to put here so here are some images and info about cats</p>
         <button>Sign up</button>
     </div>
         <div class="hero-image">
-            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>    
+            <div class="image"><img src="images/cat1.webp" alt="cat"></div>    
         </div>
     </div>
     <div class="info">
 
-        <h2>placeholder info</h2>
+        <h2>Some random images of cats</h2>
 
         <div class="images">
-        <div class="">
-            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
-            <div>this is a image</div>
+        <div class="image-text">
+            <div class="image"><img src="images/cat2.jpeg" alt="cat"></div>
+            <div class="image-text">Bunch of cat in snow hanging out</div>
         </div>
         <div class="">
-            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
-            <div>this is a image</div>
+            <div class="image"><img src="images/cat3.jpeg" alt="cat"></div>
+            <div class="image-text">Two kittens stearing at you they know what you did</div>
         </div>
         <div class="">
-            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
-            <div>this is a image</div>
+            <div class="image"><img src="images/cat4.jpeg" alt="cat"></div>
+            <div class="image-text">Big cat</div>
         </div>
         <div class="">
-            <div class="image"><img src="images/cat1.jpg" alt="cat"></div>
-            <div>this is a image</div>
+            <div class="image"><img src="images/cat5.webp" alt="cat"></div>
+            <div class="image-text">This cat had enough of picture taking</div>
         </div>
     </div>
     </div>
@@ -56,8 +56,8 @@
 
     <div class="quote"> 
 
-        <div class="quote-text">This a quote that is used as a placeholder I dont know what to write</div>
-        <div class="quote-author">-placeholder author</div>
+        <div class="quote-text">Behind every cat's gaze lies a universe of mischief and mystery, where curiosity reigns and humans are merely humble subjects to their regal feline reign.</div>
+        <div class="quote-author">-chat gpt</div>
 
     </div>
     <div class="action">
@@ -68,6 +68,6 @@
        <button class="action-button">sign up</button> 
     </div>
 </div>
-    <div class="footer"><div class="foot"> placeholder </div></div>
+    <div class="footer"><div class="foot"> bread </div></div>
 </body>
 </html>
